--- a/src/components/SimpleHeader.astro
+++ b/src/components/SimpleHeader.astro
@@ -1,8 +1,4 @@
 ---
-import { Image } from 'astro:assets'
-
-import logo from '../assets/logo.svg'
-
 interface Props {
     title?: string
 }
@@ -12,8 +8,20 @@ const { title } = Astro.props
 
 <header class="lane">
     <div class="flex">
-        <a href="/" class="radius-round">
-            <Image src={logo} width={48} height={48} alt="" />
+        <a href="/" class="logo">
+            <svg
+                aria-hidden="true"
+                focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="48"
+                ><g fill="none" fill-rule="evenodd"
+                    ><circle cx="24" cy="24" r="24" fill="#FFF"></circle><path
+                        fill="#0B0D17"
+                        d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"
+                    ></path></g
+                ></svg
+            >
             <span class="sr-only">Back to homepage</span>
         </a>
         <h1 class="fs-450 uppercase letter-spacing-1">{title}</h1>
