--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,22 +3,25 @@ import Navigation from './Navigation.astro'
 ---
 
 <header>
-    <a href="/" class="logo">
-        <svg
-            aria-hidden="true"
-            focusable="false"
-            xmlns="http://www.w3.org/2000/svg"
-            width="48"
-            height="48"
-            ><g fill="none" fill-rule="evenodd"
-                ><circle cx="24" cy="24" r="24" fill="#FFF"></circle><path
-                    fill="#0B0D17"
-                    d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"
-                ></path></g
-            ></svg
-        >
-        <span class="sr-only">Back to homepage</span>
-    </a>
+    <div class="logo">
+        <a href="/">
+            <svg
+                aria-hidden="true"
+                focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                width="1em"
+                height="1em"
+                viewBox="0 0 48 48"
+                ><g fill="none" fill-rule="evenodd"
+                    ><circle cx="24" cy="24" r="24" fill="#FFF"></circle><path
+                        fill="#0B0D17"
+                        d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"
+                    ></path></g
+                ></svg
+            >
+            <span class="sr-only">Back to homepage</span>
+        </a>
+    </div>
 
     <Navigation />
 </header>
@@ -75,13 +78,13 @@ import Navigation from './Navigation.astro'
     .logo {
         grid-row: 1;
         grid-column: 1;
-        display: grid;
-        place-items: center;
+        place-self: center;
         margin-inline-end: calc(var(--site-spacing) * -1);
 
-        > * {
-            inline-size: var(--logo-size);
-            block-size: var(--logo-size);
+        > a {
+            display: grid;
+            font-size: var(--logo-size);
+            line-height: 1;
         }
     }
 </style>
