--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from '@layouts/Layout.astro'
 
             <h1 class="fs-fluid-900 ff-serif uppercase">Space</h1>
 
-            <p class="ff-sans-normal">
+            <p class="ff-sans-normal text-accent">
                 Let’s face it; if you want to go to space, you might as well genuinely go to outer
                 space and not hover kind of on the edge of it. Well sit back, and relax because
                 we’ll give you a truly out of this world experience!
