--- a/src/scss/base/_page.scss
+++ b/src/scss/base/_page.scss
@@ -6,9 +6,10 @@
     grid-template-rows: auto 1fr;
     background-color: hsl(var(--clr-dark));
     background-image: var(--_bg);
-    background-position: center;
+    background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     color: hsl(var(--clr-white));
     font-family: var(--ff-sans-cond);
     font-size: var(--fs-400);
