--- a/src/scss/base/_page.scss
+++ b/src/scss/base/_page.scss
@@ -32,56 +32,56 @@
 
 @layer base.home {
   .home {
-    --_bg: url('../assets/background-home-mobile.jpg');
+    --_bg: url('../assets/webp/background-home-mobile.webp');
 
     @media (--for-tablet-p-up) {
-      --_bg: url('../assets/background-home-tablet.jpg');
+      --_bg: url('../assets/webp/background-home-tablet.webp');
     }
 
     @media (--for-tablet-l-up) {
-      --_bg: url('../assets/background-home-desktop.jpg');
+      --_bg: url('../assets/webp/background-home-desktop.webp');
     }
   }
 }
 
 @layer base.destination {
   .destination {
-    --_bg: url('../assets/background-destination-mobile.jpg');
+    --_bg: url('../assets/webp/background-destination-mobile.webp');
 
     @media (--for-tablet-p-up) {
-      --_bg: url('../assets/background-destination-tablet.jpg');
+      --_bg: url('../assets/webp/background-destination-tablet.webp');
     }
 
     @media (--for-tablet-l-up) {
-      --_bg: url('../assets/background-destination-desktop.jpg');
+      --_bg: url('../assets/webp/background-destination-desktop.webp');
     }
   }
 }
 
 @layer base.crew {
   .crew {
-    --_bg: url('../assets/background-crew-mobile.jpg');
+    --_bg: url('../assets/webp/background-crew-mobile.webp');
 
     @media (--for-tablet-p-up) {
-      --_bg: url('../assets/background-crew-tablet.jpg');
+      --_bg: url('../assets/webp/background-crew-tablet.webp');
     }
 
     @media (--for-tablet-l-up) {
-      --_bg: url('../assets/background-crew-desktop.jpg');
+      --_bg: url('../assets/webp/background-crew-desktop.webp');
     }
   }
 }
 
 @layer base.technology {
   .technology {
-    --_bg: url('../assets/background-technology-mobile.jpg');
+    --_bg: url('../assets/webp/background-technology-mobile.webp');
 
     @media (--for-tablet-p-up) {
-      --_bg: url('../assets/background-technology-tablet.jpg');
+      --_bg: url('../assets/webp/background-technology-tablet.webp');
     }
 
     @media (--for-tablet-l-up) {
-      --_bg: url('../assets/background-technology-desktop.jpg');
+      --_bg: url('../assets/webp/background-technology-desktop.webp');
     }
   }
 }
