--- a/src/components/TabList.astro
+++ b/src/components/TabList.astro
@@ -13,7 +13,7 @@
             aria-selected="true"
             aria-controls="tabpanel-1"
             tabindex="0"
-            data-image-src="/destination/image-moon.webp"
+            data-image-src="/destination/resize/image-moon.webp"
         >
             Moon</button
         >
@@ -24,7 +24,7 @@
             aria-selected="false"
             aria-controls="tabpanel-2"
             tabindex="-1"
-            data-image-src="/destination/image-mars.webp">Mars</button
+            data-image-src="/destination/resize/image-mars.webp">Mars</button
         >
         <button
             class="uppercase text-accent letter-spacing-2"
@@ -33,7 +33,7 @@
             aria-selected="false"
             aria-controls="tabpanel-3"
             tabindex="-1"
-            data-image-src="/destination/image-europa.webp">Europa</button
+            data-image-src="/destination/resize/image-europa.webp">Europa</button
         >
         <button
             class="uppercase text-accent letter-spacing-2"
@@ -42,7 +42,7 @@
             aria-selected="false"
             aria-controls="tabpanel-4"
             tabindex="-1"
-            data-image-src="/destination/image-titan.webp">Titan</button
+            data-image-src="/destination/resize/image-titan.webp">Titan</button
         >
     </div>
 
