--- a/src/components/TabList.astro
+++ b/src/components/TabList.astro
@@ -181,6 +181,26 @@
 
     [role='tablist'] {
         --gap: #{fluid(24px, 32px, 600px, 900px)};
+        --_duration: 0.15s;
+
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            inset: auto 0 0;
+            block-size: 3px;
+            background-color: hsl(var(--clr-white));
+
+            // the 0.23 is a magic number to set the initial width of the first item
+            // it's calculated with js onload.
+            scale: var(--_width, 0.23) 1;
+            translate: var(--_left, 0) 0;
+            transform-origin: left;
+            transition:
+                scale var(--_duration),
+                translate var(--_duration);
+        }
     }
 
     .tab-panel-images {
