--- a/src/components/TabList.astro
+++ b/src/components/TabList.astro
@@ -341,7 +341,7 @@
                 const imageSrc = tab.getAttribute('data-image-src')
                 if (imageSrc) {
                     // Update the content of the image container with the linked image
-                    imageContainer.innerHTML = `<img src="${imageSrc}" width="445" height="445" alt="">`
+                    imageContainer.innerHTML = `<img src="${imageSrc}" width="445" height="445" alt="" fetchpriority="high">`
                 }
             }
         }
