--- a/src/pages/destination.astro
+++ b/src/pages/destination.astro
@@ -1,6 +1,7 @@
 ---
 import Main from '@components/Main.astro'
 import TabList from '@components/TabList.astro'
+import TabList2 from '@components/TabList.astro'
 import Layout from '@layouts/Layout.astro'
 ---
 
