--- a/src/components/TabList.astro
+++ b/src/components/TabList.astro
@@ -230,13 +230,15 @@ import { Image } from 'astro:assets'
             display: grid;
         }
 
+        @media (--for-phone-only) {
+            .tabpanel__image {
+                max-inline-size: 65%;
+            }
+        }
+
         @media (--until-tablet-l) {
             > * {
                 max-inline-size: 62ch;
-            }
-
-            .tabpanel__image {
-                max-inline-size: 65%;
             }
         }
 
