--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,11 +7,13 @@ import Layout from '@layouts/Layout.astro'
 <Layout title="Space Tourism" className="home">
     <Main>
         <div class="flow" style="--flow-space: 1.5rem">
-            <p class="fs-fluid-500 ff-sans-cond uppercase letter-spacing-fluid text-accent">
-                So, you want to travel to space
-            </p>
-
-            <h1 class="fs-fluid-900 ff-serif uppercase">Space</h1>
+            <h1
+                class="fs-fluid-500 ff-sans-cond uppercase letter-spacing-fluid text-accent grid"
+                style="--gap: 1.5rem;"
+            >
+                So, you want to travel to
+                <span class="fs-fluid-900 ff-serif uppercase text-white">Space</span>
+            </h1>
 
             <p class="ff-sans-normal text-accent">
                 Let’s face it; if you want to go to space, you might as well genuinely go to outer
