--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -16,6 +16,10 @@
     padding-inline: var(--site-spacing);
     padding-block: #{fluid(32px, 56px, 600px, 900px)};
 
+    body:not(.home) & {
+      grid-template-rows: auto 1fr;
+    }
+
     > * {
       max-inline-size: 62ch;
     }
@@ -28,10 +32,10 @@
     @media (--for-tablet-l-up) {
       grid-template-columns:
         [fullbleed-start] minmax(0, 1fr)
-        [col1-start]
+        [main-start col1-start]
         minmax(0, calc(var(--site-constrain) / 2 - var(--site-spacing) / 2))
         [col1-end col2-start]
-        minmax(0, calc(var(--site-constrain) / 2 - var(--site-spacing) / 2)) [col2-end]
+        minmax(0, calc(var(--site-constrain) / 2 - var(--site-spacing) / 2)) [col2-end main-end]
         minmax(0, 1fr) [fullbleed-end];
       grid-template-rows: auto 1fr;
       align-items: center;
