--- a/src/pages/crew.astro
+++ b/src/pages/crew.astro
@@ -1,4 +1,5 @@
 ---
+import CrewSlider from '@components/CrewSlider.astro'
 import Main from '@components/Main.astro'
 import Layout from '@layouts/Layout.astro'
 ---
@@ -6,5 +7,7 @@ import Layout from '@layouts/Layout.astro'
 <Layout title="Space Tourism | Crew" className="crew">
     <Main>
         <h1 class="numbered-title"><span aria-hidden="true">02</span> Meet your crew</h1>
+
+        <CrewSlider />
     </Main>
 </Layout>
