Some css purge :S

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,3 +1,9 @@
+---
+import Header from './Header.astro'
+---
+
+<Header />
+
 <main class="grid-layout">
     <!--  transition:animate="slide" -->
     <slot />
