--- a/src/components/TabList.astro
+++ b/src/components/TabList.astro
@@ -268,6 +268,19 @@ import { Image } from 'astro:assets'
     .tabpanel__content {
         grid-area: tabpanel;
     }
+
+    .meta {
+        --flow-space: #{fluid(32px, 56px, 600px, 1200px)};
+
+        display: grid;
+        row-gap: 2rem;
+        padding-block-start: 2rem;
+        border-block-start: 1px solid hsl(var(--clr-white) / 25%);
+
+        @media (--for-tablet-p-up) {
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+        }
+    }
 </style>
 
 <script>
