--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,12 @@
 ---
+import '@styles/global.scss'
 import '@fontsource/barlow'
 import '@fontsource/barlow-condensed/400.css'
 import '@fontsource/barlow-condensed/700.css'
 import '@fontsource/bellefair'
-import '@styles/global.scss'
 
 import { ViewTransitions } from 'astro:transitions'
+import Header from '@components/Header.astro'
 
 interface Props {
     title?: string
